esqueleto primera sección con botón inscríbete

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
  			<a href="#">Hackaton</a>
  			<a href="#">Contacto</a>
  		</nav>
+ 		<section id="incribete">
+ 			<h2>CHICAS QUE CAMBIAN AL MUNDO</h2>
+ 			<p>¡Participa en nuestras actividades!</p>
+ 			<a href="#" class="boton" id="bInscribete">Inscríbete</a>
+ 		</section>
  	</header>
+
  	
  </body>
  </html>
