esqueleto segunda sección con botón hackathon

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
  			<p>¡Participa en nuestras actividades!</p>
  			<a href="#" class="boton" id="bInscribete">Inscríbete</a>
  		</section>
+ 		<section id="hackathon">
+ 			<img src="assets/img/hackathon.jpg" alt="hackathon" id="love">
+ 			<article>
+ 				<h1>HACKATHON</h1>
+ 				<p>¡Participa en nuestra hackthon "Love is Respect"!</p>
+ 				<p>Idea soluciones a las problemáticas que te presentamos, rodeada de chicas tan geniales como tú. Nos reuniremos el 30 de Septiembre a las 10AM.</p>
+ 				<a href="#" class="boton" id="bhack">Hackathon</a>
+ 			</article>
+ 		</section>
  	</header>
 
  	
