--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
  				<a href="#" class="boton" id="bhack">Hackathon</a>
  			</article>
  		</section>
+ 	<section id="contacto">
+ 		<img src="assets/img/made_with_code.jpg" alt="made with code" id="madeWithCode">
+ 		<article>
+ 			<h2>Contacto</h2>
+ 			<p><b>Code Girls</b></p>
+ 			<p>795 Folsom Ave, Suite 600</p>
+ 			<p>Fono:(123)456-7890</p>
+ 		</article>
+ 		<form>
+ 			<label for="nombre"></label><input type="text" placeholder="Nombre">
+ 			<label for="email"></label><input type="text" placeholder="Email">
+ 			<label for="asunto"></label><input type="text" placeholder="Asunto"><br>
+ 			<a href="#" class="boton" id="submit">Enviar</a>
+
+ 		</form>
+ 	</section>
  	</header>
 
  	
