carpeta y archivo css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
  		<form>
  			<label for="nombre"></label><input type="text" placeholder="Nombre">
  			<label for="email"></label><input type="text" placeholder="Email">
- 			<label for="asunto"></label><input type="text" placeholder="Asunto"><br>
+ 			<label for="asunto"></label><input type="text" placeholder="Asunto">
+			<textarea name="mensaje" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+ 			<br>
  			<a href="#" class="boton" id="submit">Enviar</a>
 
  		</form>
