fin de los estilos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
  	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500" rel="stylesheet">
  </head>
  <body>
+
  	<header>
  		<h1>Code Girls</h1>
  		<nav>
@@ -16,40 +17,45 @@
  			<a href="#">Hackaton</a>
  			<a href="#">Contacto</a>
  		</nav>
- 		<section id="incribete">
- 			<h2>CHICAS QUE CAMBIAN AL MUNDO</h2>
- 			<p>¡Participa en nuestras actividades!</p>
- 			<a href="#" class="boton" id="bInscribete">Inscríbete</a>
- 		</section>
- 		<section id="hackathon">
- 			<img src="assets/img/hackathon.jpg" alt="hackathon" id="love">
- 			<article>
- 				<h1>HACKATHON</h1>
- 				<p>¡Participa en nuestra hackthon "Love is Respect"!</p>
- 				<p>Idea soluciones a las problemáticas que te presentamos, rodeada de chicas tan geniales como tú. Nos reuniremos el 30 de Septiembre a las 10AM.</p>
- 				<a href="#" class="boton" id="bhack">Hackathon</a>
- 			</article>
- 		</section>
+ 	 </header>
+
+ 	<section id="inscribete">
+ 		<h2>CHICAS QUE CAMBIAN AL MUNDO</h2>
+ 		<p>¡Participa en nuestras actividades!</p>
+ 		<a href="#" class="boton" id="bInscribete">Inscríbete</a>
+ 	</section>
+
+ 	<section id="hackathon">
+ 		<img src="assets/img/hackathon.jpg" alt="hackathon" id="love">
+ 		<article>
+ 		<h2>HACKATHON</h2>
+ 		<p>¡Participa en nuestra hackthon "Love is Respect"!</p>
+ 		<p>Idea soluciones a las problemáticas que te presentamos, rodeada de chicas tan geniales como tú. Nos reuniremos el 30 de Septiembre a las 10AM.</p>
+ 		<section id="boton-space"><a href="#" class="boton" id="bhack">Hackathon</a></section>
+ 		</article>
+ 	</section>
+ 			
  	<section id="contacto">
  		<img src="assets/img/made_with_code.jpg" alt="made with code" id="madeWithCode">
  		<article>
  			<h2>Contacto</h2>
  			<p><b>Code Girls</b></p>
  			<p>795 Folsom Ave, Suite 600</p>
- 			<p>Fono:(123)456-7890</p>
- 		</article>
- 		<form>
- 			<label for="nombre"></label><input type="text" placeholder="Nombre">
- 			<label for="email"></label><input type="text" placeholder="Email">
- 			<label for="asunto"></label><input type="text" placeholder="Asunto">
-			<textarea name="mensaje" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
- 			<br>
- 			<a href="#" class="boton" id="submit">Enviar</a>
-
- 		</form>
+ 			<p>San Francisco, CA 94107</p>
+ 			<p><span>Fono:</span>(123)456-7890</p>
+ 			<form>
+ 				<label for="nombre"></label><input type="text" placeholder="Nombre">
+ 				<label for="email"></label><input type="text" placeholder="Email">
+ 				<label for="asunto"></label><input type="text" placeholder="Asunto">
+				<textarea name="mensaje" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+ 				<br>
+ 				<a href="#" class="boton" id="submit">Enviar</a>
+ 			</form>
+  		</article>
  	</section>
- 	</header>
-
- 	
+ 	<footer>
+ 		<p>©2016 Code Girl. Diseñado por <span>Laboratoria</span></p>
+ 	</footer>
+ 	<script type="text/javascript" src="assets/js/main.js"></script>
  </body>
  </html>
