funcion de botones hackathon e inscríbete

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
  			<p>San Francisco, CA 94107</p>
  			<p><span>Fono:</span>(123)456-7890</p>
  			<form>
- 				<label for="nombre"></label><input type="text" placeholder="Nombre">
- 				<label for="email"></label><input type="text" placeholder="Email">
- 				<label for="asunto"></label><input type="text" placeholder="Asunto">
-				<textarea name="mensaje" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+ 				<label for="nombre"></label><input id="name"type="text" placeholder="Nombre">
+ 				<label for="email"></label><input id="email" type="text" placeholder="Email">
+ 				<label for="asunto"></label><input id ="subject"type="text" placeholder="Asunto">
+				<textarea name="mensaje" id="message" cols="30" rows="10" placeholder="Mensaje"></textarea>
  				<br>
  				<a href="#" class="boton" id="submit">Enviar</a>
  			</form>
